--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset='utf-8'>
 	<title>Oskar learns React!</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel='stylesheet' type='text/css' href='css/styles.css'>
 </head>
 
 <body>
-	<div id="app"></div>
-	<script src="client.min.js"></script>
+	<div id='app'></div>
+	<script src='client.min.js'></script>
 </body>
 </html>
